unpackaged/main/default/objects/Payment_Method__c/Payment_Method__c.object-meta.xml
<CustomObject>
    <label>Payment Method</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>