unpackaged/main/default/objects/Payment_Method__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>IF(ISBLANK(ClientAccount__c), CASESAFEID(Client__r.AccountId), CASESAFEID(ClientAccount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>