unpackaged/main/default/objects/Payment_Method__c/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Billing Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>