unpackaged/main/default/objects/Payment_Method__c/fields/Client_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Status__c</fullName>
    <formula>TEXT(ClientAccount__r.Account_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Account Status</label>
    <type>Text</type>
</CustomField>