unpackaged/main/default/objects/Payment_Method__c/fields/ClientAccount__c.field-meta.xml
<CustomField>
    <fullName>ClientAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>