unpackaged/main/default/objects/Payment_Method__c/fields/Credit_Card_Address__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>