unpackaged/main/default/objects/Payment_Method__c/fields/Credit_Card_Number_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number_Encrypted__c</fullName>
    <label>Credit Card Number</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>