unpackaged/main/default/objects/Payment_Method__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>