unpackaged/main/default/objects/Payment_Method__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>DATE(VALUE( Expiration_Year__c ),VALUE(LEFT(TEXT(Expiration_Month__c),2)),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>