unpackaged/main/default/objects/Payment_Method__c/fields/Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Month__c</fullName>
    <label>Expiration Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - January</fullName>
            </value>
            <value>
                <fullName>02 - February</fullName>
            </value>
            <value>
                <fullName>03 - March</fullName>
            </value>
            <value>
                <fullName>04 - April</fullName>
            </value>
            <value>
                <fullName>05 - May</fullName>
            </value>
            <value>
                <fullName>06 - June</fullName>
            </value>
            <value>
                <fullName>07 - July</fullName>
            </value>
            <value>
                <fullName>08 - August</fullName>
            </value>
            <value>
                <fullName>09 - September</fullName>
            </value>
            <value>
                <fullName>10 - October</fullName>
            </value>
            <value>
                <fullName>11 - November</fullName>
            </value>
            <value>
                <fullName>12 - December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>