unpackaged/main/default/objects/Payment_Method__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inactive Reason</label>
    <type>TextArea</type>
</CustomField>