unpackaged/main/default/objects/Payment_Method__c/fields/Last_4_Digits_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits_Credit_Card__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Last 4 Digits Credit Card</label>
    <length>4</length>
    <type>Text</type>
</CustomField>