unpackaged/main/default/objects/Payment_Method__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>