unpackaged/main/default/objects/Payment_Method__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>