unpackaged/main/default/objects/Payment_Method__c/fields/Retainer_Payment__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retainer Payment</label>
    <type>Checkbox</type>
</CustomField>