unpackaged/main/default/objects/Payment_Method__c/fields/Security_Code__c.field-meta.xml
<CustomField>
    <fullName>Security_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Security Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>