unpackaged/main/default/objects/Payment_Method__c/fields/View_Full_Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>View_Full_Credit_Card_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Full Credit Card Number</label>
    <type>Checkbox</type>
</CustomField>