unpackaged/main/default/objects/Payment_Method__c/validationRules/Full_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Full_Year</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Expiration_Year__c) &amp;&amp;
LEN(Expiration_Year__c) &lt;&gt; 4</errorConditionFormula>
    <errorDisplayField>Expiration_Year__c</errorDisplayField>
    <errorMessage>Please enter the full year. E.g., 2025, not 25.</errorMessage>
</ValidationRule>