unpackaged/main/default/objects/Payment_Method__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClientAccount__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>