unpackaged/main/default/objects/Payment_Method__c/listViews/Expired_Payment_Methods.listView-meta.xml
<ListView>
    <fullName>Expired_Payment_Methods</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>ClientAccount__c</columns>
    <columns>Active__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>1/1/2024</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Expired Payment Methods</label>
</ListView>