unpackaged/main/default/objects/Payment_Method__c/listViews/Insider.listView-meta.xml
<ListView>
    <fullName>Insider</fullName>
    <columns>NAME</columns>
    <columns>ClientAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Insider</value>
    </filters>
    <label>Insider</label>
</ListView>