unpackaged/main/default/objects/Payment_Method__c/listViews/Insider_Cards.listView-meta.xml
<ListView>
    <fullName>Insider_Cards</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Expiration_Month__c</columns>
    <columns>Expiration_Year__c</columns>
    <columns>Primary__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Insider Cards</label>
</ListView>